...
  },
};

export const courierCompanies = [
  "쿠팡 주간",
  "쿠팡 새벽",
  "CJ대한통운",
  "CJ주간",
  "CJ새벽",
  "롯데택배",
  "한진택배",
  "우체국택배",
  "로젠택배",
...
